# bachelor_slam_ben

./: .gitignore  .gitmodules  README.md  automate_testing.py  bag_to_csv.sh  frames.gv
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: lio_sam.pc  ouster_ros.pc  sbg_driver.pc
devel/lib/sbg_driver/: sbg_device  sbg_device_mag
devel/share/lio_sam/cmake/: lio_sam-msg-paths.cmake  lio_samConfig.cmake
devel/share/ouster_ros/cmake/: ouster_ros-msg-extras.cmake  ouster_ros-msg-paths.cmake  ouster_rosConfig.cmake
devel/share/roseus/ros/lio_sam/: manifest.l
devel/share/sbg_driver/cmake/: sbg_driver-msg-paths.cmake  sbg_driverConfig.cmake
files_for_testing/: bag_to_csv.sh  param_setups.txt  start_lio_sam.sh
logs/lio_sam/: build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.008.log.stderr
src/SC-LIO-SAM/SC-LIO-SAM/: CMakeLists.txt
src/SC-LIO-SAM/SC-LIO-SAM/config/: params_liosam.yaml  params_liosam_original.yaml  params_mulran.yaml
src/SC-LIO-SAM/SC-LIO-SAM/include/: utility.h
src/SC-LIO-SAM/SC-LIO-SAM/launch/: module_navsat_test.launch  run.launch  run_all.launch  run_mulran.launch  run_tests.launch
src/SC-LIO-SAM/SC-LIO-SAM/src/: imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp
src/ethernet_udp_com/: CMakeLists.txt  package.xml
src/ethernet_udp_com/launch/: udp_interface.launch
src/ethernet_udp_com/msg/: trajectory.msg
src/ethernet_udp_com/scripts/: autera_udp_recv.py  autera_udp_send.py
src/ouster-ros/launch/: sensor.launch
(+13 files in other folders)
